src/objects/QPMS__Investigation_Information__c.object
<CustomObject>
    <description>Investigation Information</description>
    <fields>
        <fullName>QPMS__ComplaintId__c</fullName>
        <formula>QPMS__Regulatory_Report__r.QPMS__Complaint__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>ComplaintId</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>QPMS__Corrective_Actions_taken_as_a_result_of__c</fullName>
        <description>Corrective Actions taken as a result of the investigation</description>
        <inlineHelpText>Corrective Actions taken as a result of the investigation</inlineHelpText>
        <label>Corrective Actions taken as a result</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>QPMS__Follow_Up_Number__c</fullName>
        <formula>Text( QPMS__Regulatory_Report__r.QPMS__Follow_Up_Number__c )</formula>
        <label>Follow Up Number</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>QPMS__Investigative_Actions_and_Timeline__c</fullName>
        <description>Investigative Actions and Timeline</description>
        <inlineHelpText>Investigative Actions and Timeline</inlineHelpText>
        <label>Investigative Actions and Timeline</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>QPMS__Regulatory_Body__c</fullName>
        <formula>QPMS__Regulatory_Report__r.QPMS__Regulatory_Body__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Regulatory Body</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>QPMS__Regulatory_Report__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Regulatory Report</label>
        <referenceTo>QPMS__Regulatory_Report__c</referenceTo>
        <relationshipLabel>Investigation Informations</relationshipLabel>
        <relationshipName>Investigation_Informations</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>QPMS__Root_Cause_of_Problem__c</fullName>
        <description>Root Cause of Problem</description>
        <inlineHelpText>Root Cause of Problem</inlineHelpText>
        <label>Root Cause of Problem</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <label>Investigation Information</label>
    <nameField>
        <label>Investigation Information Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Investigation Informations</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>